[gd_scene load_steps=12 format=3 uid="uid://c2nxm6hut36wv"]

[ext_resource type="PackedScene" uid="uid://dw4rnrhjoi6kj" path="res://scenes/menus/characterSelection/characterInfoComponent/character_info.tscn" id="1_jiri0"]
[ext_resource type="Script" uid="uid://bm4avyvtajbs8" path="res://scenes/menus/characterSelection/character_selection.gd" id="1_prrdb"]
[ext_resource type="Script" uid="uid://48mgfj3pcqyq" path="res://scenes/menus/characterSelection/enemyTeamPreviewComponent/enemy_team_preview.gd" id="3_bdnlr"]
[ext_resource type="Script" uid="uid://b6o8pqpwabvfj" path="res://scenes/menus/characterSelection/characterListComponent/character_list.gd" id="3_i8m77"]
[ext_resource type="Texture2D" uid="uid://b7iccpsbjijvv" path="res://assets/sprites/characters/testDummy_idle.png" id="4_bdnlr"]
[ext_resource type="Script" uid="uid://vvv4evbnnhv4" path="res://scenes/menus/characterSelection/topRightOptionsComponent/top_right_options.gd" id="5_2s4wh"]
[ext_resource type="Texture2D" uid="uid://byr5n2dkedagk" path="res://assets/menu/button/back_arrow.png" id="5_4xs55"]
[ext_resource type="Script" uid="uid://c20ady8sma232" path="res://scenes/menus/characterSelection/playerTeamPreviewComponent/player_team_preview.gd" id="5_n0mw4"]
[ext_resource type="Script" uid="uid://bpapccbhtrpqg" path="res://scenes/menus/characterSelection/teamButtonsComponent/team_buttons.gd" id="7_3hanb"]
[ext_resource type="Texture2D" uid="uid://skyu4u5uoadv" path="res://assets/sprites/abilities/test_ability_icon.png" id="7_cvhfq"]
[ext_resource type="PackedScene" uid="uid://c4j7kesycb6oa" path="res://scenes/menus/optionsPopup/options_popup.tscn" id="10_xjjqo"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prrdb")

[node name="UIMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UIMargin"]
layout_mode = 2

[node name="UIContainer" type="HBoxContainer" parent="UIMargin"]
layout_mode = 2

[node name="LeftSide" type="VBoxContainer" parent="UIMargin/UIContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterInfo" parent="UIMargin/UIContainer/LeftSide" instance=ExtResource("1_jiri0")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyTeamPreview" type="HBoxContainer" parent="UIMargin/UIContainer/LeftSide"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
script = ExtResource("3_bdnlr")

[node name="CharacterButton" type="TextureButton" parent="UIMargin/UIContainer/LeftSide/EnemyTeamPreview"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("4_bdnlr")
ignore_texture_size = true
stretch_mode = 4

[node name="VSeparator" type="VSeparator" parent="UIMargin/UIContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="RightSide" type="VBoxContainer" parent="UIMargin/UIContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopRightOptions" type="HBoxContainer" parent="UIMargin/UIContainer/RightSide"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
script = ExtResource("5_2s4wh")

[node name="BackButton" type="TextureButton" parent="UIMargin/UIContainer/RightSide/TopRightOptions"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture_normal = ExtResource("5_4xs55")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="UIMargin/UIContainer/RightSide/TopRightOptions"]
layout_mode = 2

[node name="OptionsButton" type="TextureButton" parent="UIMargin/UIContainer/RightSide/TopRightOptions/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_cvhfq")
ignore_texture_size = true
stretch_mode = 4
flip_h = true

[node name="PlayerTeamPreview" type="HBoxContainer" parent="UIMargin/UIContainer/RightSide"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 2.0
script = ExtResource("5_n0mw4")

[node name="CharacterButton" type="TextureButton" parent="UIMargin/UIContainer/RightSide/PlayerTeamPreview"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("4_bdnlr")
ignore_texture_size = true
stretch_mode = 4

[node name="CharacterList" type="GridContainer" parent="UIMargin/UIContainer/RightSide"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
columns = 5
script = ExtResource("3_i8m77")

[node name="CharacterButton" type="TextureButton" parent="UIMargin/UIContainer/RightSide/CharacterList"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("4_bdnlr")
ignore_texture_size = true
stretch_mode = 4

[node name="TeamButtons" type="HBoxContainer" parent="UIMargin/UIContainer/RightSide"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("7_3hanb")

[node name="ClearButton" type="Button" parent="UIMargin/UIContainer/RightSide/TeamButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear team"

[node name="VSeparator" type="VSeparator" parent="UIMargin/UIContainer/RightSide/TeamButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="StartButton" type="Button" parent="UIMargin/UIContainer/RightSide/TeamButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start battle"

[node name="OptionsPopup" parent="." instance=ExtResource("10_xjjqo")]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
unfocusable = false

[connection signal="pressed" from="UIMargin/UIContainer/LeftSide/EnemyTeamPreview/CharacterButton" to="UIMargin/UIContainer/LeftSide/EnemyTeamPreview" method="_on_character_button_pressed"]
[connection signal="pressed" from="UIMargin/UIContainer/RightSide/TopRightOptions/BackButton" to="UIMargin/UIContainer/RightSide/TopRightOptions" method="_on_back_button_pressed"]
[connection signal="pressed" from="UIMargin/UIContainer/RightSide/TopRightOptions/MarginContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="UIMargin/UIContainer/RightSide/PlayerTeamPreview/CharacterButton" to="UIMargin/UIContainer/RightSide/PlayerTeamPreview" method="_on_character_button_pressed"]
[connection signal="pressed" from="UIMargin/UIContainer/RightSide/CharacterList/CharacterButton" to="UIMargin/UIContainer/RightSide/CharacterList" method="_on_character_button_pressed"]
[connection signal="pressed" from="UIMargin/UIContainer/RightSide/TeamButtons/ClearButton" to="UIMargin/UIContainer/RightSide/TeamButtons" method="_on_clear_button_pressed"]
[connection signal="pressed" from="UIMargin/UIContainer/RightSide/TeamButtons/StartButton" to="UIMargin/UIContainer/RightSide/TeamButtons" method="_on_start_button_pressed"]
